<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/imcTXT"
        style="@style/novoEstilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/hello_word"
        android:textSize="48sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/pesoEDT"
        style="@style/input_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imcTXT"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="24dp"
        android:hint="@string/peso_em_kg_ex_70_9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imcTXT" />

    <EditText
        android:id="@+id/alturaEDT"
        style="@style/input_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/altura_em_cm_ex_1_78"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@id/pesoEDT"
        app:layout_constraintTop_toBottomOf="@id/pesoEDT"
        tools:visibility="visible" />

    <Button
        android:id="@+id/calcularBTN"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="391dp"
        android:backgroundTint="#3F51B5"
        android:padding="16dp"
        android:text="@string/calcular"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>